--- a/src/components/views/PolicyPage/ListPoliciesPage/ListPoliciesPage.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/ListPoliciesPage.module.scss
@@ -4,13 +4,14 @@
 
   .miniMapHolder {
     flex-basis: 25%;
+    margin-top: 3rem;
   }
 }
 
 .caseloadPlot,
 .policyList {
   // padding-right: 2rem;
-  margin-top: 2rem;
+  margin-top: 3rem;
   margin-bottom: 2rem;
   width: 100%;
 
@@ -21,6 +22,17 @@
     font-family: "rawline";
     text-transform: none;
     font-size: 28px;
+  }
+}
+.caseloadPlot {
+  .caseloadHeader {
+    margin-bottom: -1.5rem;
+    margin-top: 3rem;
+  }
+
+  figcaption {
+    text-align: right;
+    font-style: italic;
   }
 }
 
