--- a/src/components/views/PolicyPage/ListPoliciesPage/PolicyFilterBar/DateSortControl/DateSortControl.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/PolicyFilterBar/DateSortControl/DateSortControl.module.scss
@@ -1,5 +1,5 @@
 .dateSort {
-  margin-top: 0.5rem;
+  margin-top: 0.75rem;
 
   margin-right: 0.5em;
   appearance: none;
